# python-project-50

./: .coverage  .gitignore  Makefile  README.md  README.md.save  coverage.xml  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  builder.py  cli.py  differ.py  parser.py  stringify.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: builder.py  gendiff.py  generate_diff.py  parser.py  stylish.py  tree_test_file.py
junit/: test-results.xml
test_files/: result.txt
tests/: test_generate_diff.py
tests/fixtures/: nested_result.txt.save
